fix: logo overflow in safari

--- a/src/styles/components/layout/LayoutHeader.styl
+++ b/src/styles/components/layout/LayoutHeader.styl
@@ -11,6 +11,7 @@
 .LayoutHeader-Logo
   height 100%
   width 150px
+  display block
 
 .LayoutHeader-Menu
   display flex
